--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,10 @@
 body {
   background-color: lightblue;
 }
+
+p {
+  text-align: center;
+  font-size: 45px;
+  font-style: italic;
+  font-family: "Times New Roman", Times, serif;
+}
